# kt-bank

./: .$kt-bank_UML_v0_5.drawio.bkp  .clang-format  .gitignore  Beziehungstypen UML.drawio  C++ Mindmap.drawio  CMakeLists.txt  CMake_how_to_setup.md  ExampleClass.cpp  Projecttopics.txt  README.md  kt-bank_UML.drawio  kt-bank_UML_v0_3.drawio  kt-bank_UML_v0_4.drawio  kt-bank_UML_v0_5.drawio  notes.txt  run.bat  test.txt
.cache/clangd/index/: Bank.cpp.F4329A49388C8112.idx  Bank.h.C717FAC736F32A44.idx  Bankkunde.cpp.1DCEA9D68AF5E94E.idx  Bankkunde.h.FB8537A36F436401.idx  Konto.cpp.475CE737293872ED.idx  Konto.h.0B018D02C7E8A942.idx  Kreditkarte.cpp.B944ACE268EB3DA2.idx  Kreditkarte.h.BCB972F6164C594D.idx  main.cpp.63BDBC5CCBB92F8E.idx
Class Diagram archive/: kt-bank_UML.drawio  kt-bank_UML_v0_1.drawio  kt-bank_UML_v0_2.drawio  kt-bank_UML_v0_3.drawio  kt-bank_UML_v0_4.drawio
src/: Bank.cpp  Bank.h  Bankautomat.cpp  Bankautomat.h  Bankkunde.cpp  Bankkunde.h  Karte.cpp  Konto.cpp  Konto.h  Kreditkarte.cpp  Kreditkarte.h  main.cpp
src/headers/: Bank.h  Bankkunde.h  Karte.h  Konto.h  Kreditkarte.h
